--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
@@ -10,5 +10,7 @@
 @using Dotnet9.WebAPI.ViewModel.BlogPosts
 @using Dotnet9.Web.Service.Albums
 @using Dotnet9.Web.ViewModel.Albums
+@using Dotnet9.Web.ViewModels.Home
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @namespace Dotnet9.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
