添加推荐文章列表；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/BlogPosts/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/BlogPosts/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 @section Headers{
-    <link rel="stylesheet" href="/css/detail.css"/>
+    <link rel="stylesheet" href="~/css/detail.css"/>
     @if (SiteOptions.Value.Valine)
     {
         <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
