--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
@@ -10,7 +10,7 @@
     {
         HeaderViewModel vm = new();
         vm.Albums = await AlbumService.GetAlbumsAsync();
-        vm.Categories = await CategoryService.GetCategoriesForMenuAsync();
+        vm.Categories = await CategoryService.CategoriesForMenuAsync();
         return vm;
     }
 
