--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 <script src="~/js/main.js"></script>
 @await RenderSectionAsync("Scripts", false)
 
-<script>
+@*<script>
         var _hmt = _hmt || [];
         (function () {
             var hm = document.createElement("script");
@@ -36,6 +36,6 @@
     </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
         crossorigin="anonymous"></script>
-
+*@
 </body>
 </html>
