--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
@@ -7,7 +7,7 @@
 
     async Task<List<CategoryBrief>?> GetCategoryFromDb()
     {
-        return await CategoryService.GetCategoriesAsync();
+        return await CategoryService.CategoriesAsync();
     }
 
     var categories = await CacheHelper.GetOrCreateAsync(cacheKeyForCategories,
