--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/wwwroot/css/base.css
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/wwwroot/css/base.css
@@ -610,7 +610,7 @@ a.btn-add:hover { border-color: #F22D00; background: #F22D00; }
 .endmenu li a { display: block }
 .act a { color: #09F }
 .endmenu li i { display: block; width: 30px; height: 22px; line-height: 30px; margin: 4px auto; font-size: 22px; }
-@font-face { font-family: 'iconfont'; src: url('../font/iconfont.eot'); src: url('../font/iconfont.eot?#iefix') format('embedded-opentype'), url('../font/iconfont.woff2') format('woff2'), url('../font/iconfont.woff') format('woff'), url('../font/iconfont.ttf') format('truetype'), url('../font/iconfont.svg#iconfont') format('svg'); }
+@font-face { font-family: 'iconfont'; src: url('../fonts/iconfont.eot'); src: url('../fonts/iconfont.eot?#iefix') format('embedded-opentype'), url('../fonts/iconfont.woff2') format('woff2'), url('../fonts/iconfont.woff') format('woff'), url('../fonts/iconfont.ttf') format('truetype'), url('../fonts/iconfont.svg#iconfont') format('svg'); }
 .iconfont { font-family: "iconfont" !important; font-size: 16px; font-style: normal; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 .icon-shouye:before { content: "\e625"; }
 .icon-fenlei:before { content: "\e62f"; }
