--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Home/_BannerAndHeadlineBoxPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Home/_BannerAndHeadlineBoxPartial.cshtml
@@ -48,7 +48,7 @@
         @if (bannerDatas?.TouTiao != null)
         {
             <h2 class="headline-news-title">
-                <span>头条</span><a href="@bannerDatas.TouTiao.CreationTime.ToString("/yyyy/dd")/@bannerDatas.TouTiao.Slug">@bannerDatas.TouTiao.Title</a>
+                <span>头条</span><a target="_blank" href="@bannerDatas.TouTiao.CreationTime.ToString("/yyyy/dd")/@bannerDatas.TouTiao.Slug">@bannerDatas.TouTiao.Title</a>
             </h2>
             <p class="headline-news-smalltext">@bannerDatas.TouTiao.Description</p>
         }
@@ -57,9 +57,10 @@
             <ul class="headline-news-list">
                 @foreach (var blogPost in bannerDatas.New2To7)
                 {
-                    <li><a href="@blogPost.CreationTime.ToString("/yyyy/dd")/@blogPost.Slug">@blogPost.Title</a></li>
+                    <li><a target="_blank" href="@blogPost.CreationTime.ToString("/yyyy/dd")/@blogPost.Slug">@blogPost.Title</a></li>
                 }
             </ul>
         }
     </div>
 </div>
+<!-- headline-box end-->
