--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
@@ -11,6 +11,8 @@
 @await Html.PartialAsync("Home/_BannerAndHeadlineBoxPartial")
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_TuiJianNewsPartial")
+<div class="clear blank"></div>
+@await Html.PartialAsync("Home/_PicturePartial")
 
 @section Scripts{
     <script src="~/js/swiper.min.js"></script>
