添加新闻文章列表；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Home/_BannerAndHeadlineBoxPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Home/_BannerAndHeadlineBoxPartial.cshtml
@@ -3,7 +3,7 @@
 @inject IDistributedCacheHelper CacheHelper
 
 @{
-    const string cacheKeyForCategories = "_BannerPartial";
+    const string cacheKeyForCategories = "_BannerAndHeadlineBoxPartial";
 
     async Task<BannerViewModel> GetDataFromDb()
     {
