--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
@@ -13,6 +13,8 @@
 @await Html.PartialAsync("Home/_TuiJianNewsPartial")
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_PicturePartial")
+<div class="clear blank"></div>
+@await Html.PartialAsync("Home/_NewsPartial")
 
 @section Scripts{
     <script src="~/js/swiper.min.js"></script>
