添加视频列表；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
@@ -15,6 +15,8 @@
 @await Html.PartialAsync("Home/_PicturePartial")
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_NewsPartial")
+<div class="clear blank"></div>
+@await Html.PartialAsync("Home/_VideosPartial")
 
 @section Scripts{
     <script src="~/js/swiper.min.js"></script>
