添加文字列表；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
@@ -17,6 +17,9 @@
 @await Html.PartialAsync("Home/_NewsPartial")
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_VideosPartial")
+<div class="clear blank"></div>
+@await Html.PartialAsync("Home/_WenZiPartial")
+
 
 @section Scripts{
     <script src="~/js/swiper.min.js"></script>
