添加工具列表；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
@@ -19,6 +19,8 @@
 @await Html.PartialAsync("Home/_VideosPartial")
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_WenZiPartial")
+<div class="clear blank"></div>
+@await Html.PartialAsync("Home/_ToolsPartial")
 
 
 @section Scripts{
