添加热门标签和友情链接；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
@@ -21,6 +21,11 @@
 @await Html.PartialAsync("Home/_WenZiPartial")
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_ToolsPartial")
+<div class="clear blank"></div>
+@await Html.PartialAsync("Home/_TagPartial")
+<div class="clear blank"></div>
+@await Html.PartialAsync("Home/_LinkPartial")
+<div class="clear blank"></div>
 
 
 @section Scripts{
