统一关于、隐私、赞助页面网格；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Abouts/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Abouts/Index.cshtml
@@ -2,49 +2,37 @@
 @model IndexModel
 @inject IOptionsSnapshot<SiteOptions> SiteOptions
 @{
-    Layout = "_SimpleLayout";
-    ViewData["Title"] = "关于";
+    ViewData["Title"] = "关于我们";
 }
 
 @section Headers{
-    <link rel="stylesheet" href="/css/detail.css"/>
-    @if (SiteOptions.Value.Valine)
-    {
-        <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
-    }
+    <link rel="stylesheet" href="~/css/blogpost.css"/>
+    <link rel="stylesheet" href="~/css/prism.css"/>
 }
 
-<div class="detail">
-    <div class="detail-left">
-        <div id="view-content" class="detail-content">@Html.Raw(@Model.ContentHtml)</div>
-        @if (SiteOptions.Value.Valine)
-        {
-            <div class="gap-solid vcomments-gap"></div>
-            <div id="vcomments" class="vcomments"></div>
-            <div class="vcomments-copyright">评论由Valine提供支持</div>
-        }
+<div class="page whitebg">
+    <div class="page-title" id="pageContents">
+        <ul>
+            <li>
+                <a href="/about">关于我们</a>
+            </li>
+            <li>
+                <a href="/donation">赞助我们</a>
+            </li>
+            <li>
+                <a href="/privacy">隐私政策</a>
+            </li>
+        </ul>
     </div>
-    <div class="detail-right">
-        <div class="toc-card">
-            <h1 class="toc-card-list">目录</h1>
-            <div class="toc-box" id="toc-box"></div>
+    <div class="page-box">
+        <h2 class="page-box-title">关于我们</h2>
+        <div class="page-box-content">
+            <div id="nice">@Html.Raw(Model.ContentHtml)</div>
         </div>
     </div>
 </div>
 
-<div class="zoom-prev">
-    <div class="zoom-container"></div>
-</div>
-
-@if (SiteOptions.Value.Valine)
+@section Scripts
 {
-    <script>
-  new Valine({
-    el: "#vcomments",
-    appId: "@SiteOptions.Value.ValineConfig!.AppId",
-    appKey: "@SiteOptions.Value.ValineConfig.AppKey",
-    serverURLs: "@SiteOptions.Value.ValineConfig.ServerURL",
-            placeholder: "@SiteOptions.Value.ValineConfig.Placeholder"
-  });
-</script>
+    <script src="~/js/prism.js"></script>
 }
